--- a/Elo7 - Classificador de Produtos.ipynb
+++ b/Elo7 - Classificador de Produtos.ipynb
@@ -371,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note que medindo a correlação de pearson dos campos disponiveis com a categoria do produto podemos avaliar que não existem correlações suficientes eles eles para determinar a classificação dos produtos através destas caracteristicas."
+    "Note que medindo a correlação de pearson dos campos disponiveis com a categoria do produto podemos avaliar que não existem correlações suficientes entre eles para determinar a classificação dos produtos através destas caracteristicas."
    ]
   },
   {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "Name: category, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -442,14 +442,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A partir da análise da distribuição podemos avaliar que os produtos com maior quantidade de registros terão a maior probabilidade de que o modelo aprenda sua classificação.\n"
+    "A partir da análise da distribuição podemos avaliar que os produtos com maior quantidade de registros terão maior probabilidade que o modelo aprenda sua classificação.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  Exclução dos campos que não são fatores determinantes para categorização dos produtos "
+    "####  Exclusão dos campos que não são determinantes para categorização dos produtos "
    ]
   },
   {
@@ -753,7 +753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note que também não existem correlações suficientes, tendo o tamanho uma correlação da categoria de -0.017 e com o preço de -0.219, ou seja estes campos também não contribuem para a identificação do produto podendo ser excluidos do dataset."
+    "Não existem correlações suficientes, tendo o peso uma correlação da categoria de -0.017 e com o preço de -0.219, ou seja estes campos também não contribuem para a identificação do produto podendo ser excluidos do dataset."
    ]
   },
   {
@@ -775,7 +775,7 @@
    "source": [
     "Precisamos então pensar em uma solução do problema baseado nos campos de valores não estruturados para criar um modelo que seja capaz de aprender baseado em textos livres, baseados na análise dos campos como titulo, query e tags.\n",
     "\n",
-    "O modelo fará um minetismo da forma humana de classificar os produtos através de textos não estruturados. "
+    "O modelo deve fazer um minetismo da forma humana de classificar os produtos através de textos não estruturados. "
    ]
   },
   {
@@ -947,8 +947,8 @@
    "source": [
     "Temos então 3 fortes candidados como query - termo de busca inserido pelo usuário, title - título do produto e a \n",
     "concatenated_tags - tags do produto inseridas pelo vendedor.\n",
-    "Podemos por pensamento empirico determinar que estes são os fatores determinantes para classificação do produto, pois são os fatores que os usuários do site usam para buscar os produtos, ou seja através destes itens de buscam podemos facilmente classificar o produto corretamente.\n",
-    "O desafio aqui é criar um modelo que possa usar os mesmos fatores para determinar a classificação o produto.\n",
+    "Podemos por pensamento empirico determinar que estes são os fatores determinantes para classificação do produto, pois são os fatores que os usuários do site usam para buscar os produtos, ou seja através destes itens de busca podemos facilmente classificar o produto corretamente.\n",
+    "O desafio aqui é criar um modelo que possa usar os mesmo fatores que um ser humano usaria para determinar a classificação o produto.\n",
     "Para fazer um minetismo da forma de classificação dos usuários do site, vamos usar os dados não estruturados para determinar a classificação dos produtos."
    ]
   },
@@ -992,9 +992,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note que o corpus de palavras no titulo e nas tags estão muito próximos, estão entre +- 23 mil a +-25 mil. \n",
+    "Note que o corpus de palavras no titulo e nas tags estão muito próximos, estão entre 22 mil a 26 mil. \n",
     "Este é o tamanho do corpus, ou seja quantidade de palavras únicas usados para determinar a classificação dos produtos.\n",
-    "O corpus de query tem uma redução de +- 6 mil palavras. \n",
+    "O corpus de query estas palavras estão reduzidas entre 6 mil palavras. \n",
+    "\n",
     "Precisamos então avaliar qual seria o corpus com maior indice de precisão para classificação de produto. \n",
     "Podendo ser os campos com maior quantidade de palavras unicas ou o campo com menor quantidade de palavras.\n",
     "\n"
@@ -1013,23 +1014,25 @@
    "source": [
     "#### Tokenizer\n",
     "Para que um modelo possa analisar estes dados precisamos transformar estes dados para valores numéricos.\n",
-    "Um valor numérico será atribuído a um número de n-grams por sequência. Vamos precisar usar uma função de tokenização.\n",
-    "O Tokenizer disponivel na biblioteca do keras, esta função vai determina um index para cada palavra presente no corpus.\n"
+    "Um valor numérico será atribuído a um número de n-grams por sequência. Usaremos uma função de tokenização.\n",
+    "O Tokenizer disponivel na biblioteca do keras, onde esta função determinará um index para cada palavra presente no corpus.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Os valores devem ser formatados de modo que todas as sequências tenham o mesmo tamanho, que no caso do texto podemos analisar que tem tamanhos distintos.Então precisamos utilizar a função pad_sequences,também do keras, que será responsável por truncar as sequências maiores e completar as sequências menores com zeros."
+    "Os valores dos campos devem ser formatados de modo que todas as sequências tenham o mesmo tamanho, que no caso do texto livres podemos analisar que tem tamanhos distintos.\n",
+    "Precisamos então utilizar a função pad_sequences,também do keras, que será responsável por truncar as sequências maiores e completar as sequências menores com zeros."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Criaremos funções para testar nosso modelo com os dois corpus title e query. Desta forma podemos testar qual delas terá a maior precisão para classificação dos produtos.\n",
-    "Como os campos são textos livres, não estruturados, um deles terá a melhor classificação."
+    "Criaremos funções para testar nosso modelo com os dois corpus title e query. \n",
+    "Desta forma podemos testar qual delas terá maior precisão para classificação dos produtos.\n",
+    "Como os campos são textos livres, não estruturados, avaliares qual corpus terá a melhor classificação."
    ]
   },
   {
@@ -1222,7 +1225,7 @@
    "metadata": {},
    "source": [
     "Tendo os conjunto de dados pre processados de forma que um modelo de máquina possa interpretá-los. \n",
-    "Vamos então separar os dados entre dados de treinamento e de validação para avaliar a precisão do nossos modelos.\n",
+    "Vamos então separar os dados entre dados de treinamento e de validação para avaliar a precisão dos modelos.\n",
     "Vamos então dividir os dados entre 80% para treinamento e 20% para validação do modelo.\n"
    ]
   },
@@ -1314,7 +1317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tendo o dataset de treinamento de 30.805 divididos por 6 para treinamento e 7.702 divididos por 6 para validação do modelo tanto para o corpus de 'title' como o de 'query'.\n",
+    "Tendo o dataset de treinamento de 30.805 divididos por 6 categorias para treinamento e 7.702 também divididos por 6 categorias para validação do modelo tanto para o corpus de 'title' como no de 'query'.\n",
     "\n",
     "Temos então 30.805 registros para treinamento do modelo e 7.702 registro para a validação do modelo para cada corpus."
    ]
@@ -1345,7 +1348,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O objetivo é ter um modelo que classifique os dados como os seres humanos, nos não lemos cada palavra com um significado único, mas  vamos lendo as palavras e formando a interpretação baseada na palavra anterior, ou seja nossos pensamentos tem persistência.\n",
+    "O objetivo é contruir um modelo que possa classificar os dados através do corpus.\n",
+    "Nos seres humanos não lemos cada palavra com um significado único, mas vamos lendo as palavras e formando a interpretação baseada na palavra anterior, ou seja nossos pensamentos tem persistência.\n",
     "\n",
     "Com modelos tradicionais isso seria impossivel, até mesmo se tratando de redes neurais tradicionais, a necessidade de ter persistência dificulta a aplicação por metodos tradicionais.\n",
     "Para resolver este problema de classificação de produto baseado em textos não estruturados precisamos usar modelos mais avançados.\n",
@@ -1384,15 +1388,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "O corpus máximo determinado conforme as palavras únicas encontradas em cada corpus."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,20 +1401,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O modelo terá camadas de Embedding de 128 e LSTM de 196. \n",
-    "Teremos um dropout de 0.5 para evitar que a rede decorre o cada, ao invés de aprender.\n",
-    "Como temos 6 categorias teremos uma Dense de 6 neuromios para determinar as 6 possiveis saidas. "
+    "O corpus máximo determinado conforme as palavras únicas encontradas em cada corpus."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "embed_dim = 128\n",
     "lstm_out  = 196\n",
     "dropout   = 0.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O modelo terá camadas de Embedding de 128 e LSTM de 196. \n",
+    "Teremos um dropout de 0.5 para evitar que a rede decorre o dado ao invés de aprender.\n",
+    "Como temos 6 categorias teremos uma Dense final de 6 neuromios para determinar as 6 possiveis saidas. "
    ]
   },
   {
@@ -1484,7 +1488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Os dois modelos estão criados tendo uma rede neural recorrente de 1,074,798 para a classificação dos produtos através do campo query e um modelo de 3,501,422 para a classificação dos produtos através do titulo."
+    "Os dois modelos criados possuem redes neurais recorrentes de 1,074,798 para a classificação dos produtos através do corpus de query e um modelo de 3,501,422 para a classificação dos produtos através do corpus do titulo."
    ]
   },
   {
@@ -1500,24 +1504,17 @@
    "source": [
     "Para o treinamento do modelo vamos utilizar 20 epocas como ciclos de treinamento completo no conjunto de treinamento.\n",
     "Vamos testar e comparar os modelos usando 20 ciclos, pois as quantidade de epocas suficientes para convergência variam de dados para dados. \n",
-    "O objetivo de usar a mesma quantidade de epocas é ter a mesma metrica para avaliar a convergencia dos modelos.\n"
+    "O objetivo de usar a mesma quantidade de epocas é ter a mesma métrica para avaliar a convergência dos modelos.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 32\n",
     "epoch=20"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note que o modelo treinado no corpus de 'title' convergiu com maior acurácia com 20 ciclos do que o modelo treinando no corpus de 'query'."
    ]
   },
   {
@@ -1599,7 +1596,7 @@
    "source": [
     "Conforme demonstrado abaixo:\n",
     "##### Modelo com aprendizagem no corpus do 'title'\n",
-    "Com épocas de 20/20, o modelo de aprendizagem no corpus do titulo obteve: uma perda de 0.1504 e acurácia de 0.9432."
+    "Com épocas de 20/20, o modelo de aprendizagem no corpus do titulo obteve: uma perda de 0.1505 e acurácia de 0.9435."
    ]
   },
   {
@@ -1681,9 +1678,16 @@
    "source": [
     " \n",
     "##### Modelo com aprendizagem no corpus do 'query'\n",
-    "Com épocas de 20/20, o modelo de aprendizagem no corpus do titulo obteve: uma perda de 0.3621 e acurácia de 0.8677.\n",
+    "Com épocas de 20/20, o modelo de aprendizagem no corpus do titulo obteve: uma perda de 0.3623 e acurácia de 0.8667.\n",
     "\n",
     "Note que para o modelo de aprendizagem pelo corpus do campo query seriam necessárioss mais épocas para maior aprendizagem do modelo.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note que o modelo treinado no corpus de 'title' convergiu com maior acurácia com 20 ciclos do que o modelo treinando no corpus de 'query'."
    ]
   },
   {
