--- a/Elo7 - Classificador de Produtos.ipynb
+++ b/Elo7 - Classificador de Produtos.ipynb
@@ -696,7 +696,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Por exemplo note que a correlação da categoria com o peso e com o tamanho não existem."
+    "Por exemplo note que a correlação da categoria com o peso e com o preço são insignificantes para determinar a categoria do produto."
    ]
   },
   {
@@ -753,7 +753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Não existem correlações suficientes, tendo o peso uma correlação da categoria de -0.017 e com o preço de -0.219, ou seja estes campos também não contribuem para a identificação do produto podendo ser excluidos do dataset."
+    "Não existem correlações suficientes, tendo o peso uma correlação com a categoria de -0.017 e com o preço de -0.219, ou seja estes campos também não contribuem para a identificação do produto podendo ser excluidos do dataset."
    ]
   },
   {
@@ -775,7 +775,7 @@
    "source": [
     "Precisamos então pensar em uma solução do problema baseado nos campos de valores não estruturados para criar um modelo que seja capaz de aprender baseado em textos livres, baseados na análise dos campos como titulo, query e tags.\n",
     "\n",
-    "O modelo deve fazer um minetismo da forma humana de classificar os produtos através de textos não estruturados. "
+    "O modelo deve fazer um mimetismo da forma humana de classificar os produtos através de textos não estruturados. "
    ]
   },
   {
@@ -784,7 +784,7 @@
    "source": [
     "Note que os fatores determinantes para a classifação dos produtos são os campos com texto livres.\n",
     "Baseado nas 6 possiveis categorias humanamente podemos classificar com alta precisão a categoria do produto, apenas lendo os campos como query, title ou concatenarted_tags.\n",
-    "O ideal seria que nosso modelo pudesse fazer o mesmo, pois as outras caracteristicas não são relevantes para a classificação do produto, conforme demonstrado na análise exploratória dos dados. "
+    "O ideal é que nosso modelo possa fazer o mesmo."
    ]
   },
   {
@@ -945,11 +945,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Temos então 3 fortes candidados como query - termo de busca inserido pelo usuário, title - título do produto e a \n",
-    "concatenated_tags - tags do produto inseridas pelo vendedor.\n",
+    "Temos então 3 fortes candidados como query - termo de busca inserido pelo usuário, title - título do produto e a concatenated_tags - tags do produto inseridos pelo vendedor.\n",
     "Podemos por pensamento empirico determinar que estes são os fatores determinantes para classificação do produto, pois são os fatores que os usuários do site usam para buscar os produtos, ou seja através destes itens de busca podemos facilmente classificar o produto corretamente.\n",
-    "O desafio aqui é criar um modelo que possa usar os mesmo fatores que um ser humano usaria para determinar a classificação o produto.\n",
-    "Para fazer um minetismo da forma de classificação dos usuários do site, vamos usar os dados não estruturados para determinar a classificação dos produtos."
+    "O desafio aqui é criar um modelo que possa usar os mesmos fatores que um ser humano usaria para determinar a classificação o produto.\n",
+    "Para fazer este mimetismo vamos usar os dados não estruturados para determinar a classificação dos produtos."
    ]
   },
   {
@@ -992,9 +991,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note que o corpus de palavras no titulo e nas tags estão muito próximos, estão entre 22 mil a 26 mil. \n",
+    "Note que o corpus de palavras no titulo e nas tags estão próximos, entre 22 mil a 26 mil. \n",
     "Este é o tamanho do corpus, ou seja quantidade de palavras únicas usados para determinar a classificação dos produtos.\n",
-    "O corpus de query estas palavras estão reduzidas entre 6 mil palavras. \n",
+    "No corpus de query estas palavras estão reduzidas entre 6 mil palavras. \n",
     "\n",
     "Precisamos então avaliar qual seria o corpus com maior indice de precisão para classificação de produto. \n",
     "Podendo ser os campos com maior quantidade de palavras unicas ou o campo com menor quantidade de palavras.\n",
@@ -1032,7 +1031,7 @@
    "source": [
     "Criaremos funções para testar nosso modelo com os dois corpus title e query. \n",
     "Desta forma podemos testar qual delas terá maior precisão para classificação dos produtos.\n",
-    "Como os campos são textos livres, não estruturados, avaliares qual corpus terá a melhor classificação."
+    "Como os campos são textos livres, não estruturados, avaliaremos qual corpus terá a melhor precisão."
    ]
   },
   {
@@ -1224,7 +1223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tendo os conjunto de dados pre processados de forma que um modelo de máquina possa interpretá-los. \n",
+    "Tendo os conjuntos de dados pre processados de forma que um modelo de máquina possa interpretá-los. \n",
     "Vamos então separar os dados entre dados de treinamento e de validação para avaliar a precisão dos modelos.\n",
     "Vamos então dividir os dados entre 80% para treinamento e 20% para validação do modelo.\n"
    ]
@@ -1317,9 +1316,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tendo o dataset de treinamento de 30.805 divididos por 6 categorias para treinamento e 7.702 também divididos por 6 categorias para validação do modelo tanto para o corpus de 'title' como no de 'query'.\n",
-    "\n",
-    "Temos então 30.805 registros para treinamento do modelo e 7.702 registro para a validação do modelo para cada corpus."
+    "Tendo o dataset de treinamento de 30.805 para treinamento e 7.702 para validação do modelo tanto para o corpus de 'title' como no de 'query'."
    ]
   },
   {
@@ -1354,9 +1351,9 @@
     "Com modelos tradicionais isso seria impossivel, até mesmo se tratando de redes neurais tradicionais, a necessidade de ter persistência dificulta a aplicação por metodos tradicionais.\n",
     "Para resolver este problema de classificação de produto baseado em textos não estruturados precisamos usar modelos mais avançados.\n",
     "\n",
-    "O modelo precisa levar em consideração não somente as palavras mais as palavras anteriores, tendo uma peristência, assim como um ser humano faria.\n",
+    "O modelo precisa levar em consideração não somente a palavra mais as palavras anteriores, tendo uma peristência, assim como um ser humano faria.\n",
     "\n",
-    "As Redes neurais recorrentes podem resolver esse problema, pois estas redes possuem um aprendizado com loops, e isso permite que o modelo aprenda com informações persistentes, assim como nós seres humanos classificariamos os produtos apenas lendo os textos.\n",
+    "As Redes neurais recorrentes podem resolver esse problema, pois estas redes possuem um aprendizado com loops, e isso permite que o modelo aprenda com informações persistentes, assim como nós seres humanos classificaríamos os produtos apenas lendo os textos.\n",
     "\n",
     "Uma rede neural recorrente são redes de múltiplas cópias da mesma rede, onde cada rede passa uma mensagem a uma rede sucessora, desta forma podemos criar a persistencia que precisamos para resolver o problema de classificação de produto baseado nos textos livres dos campos como title ou query."
    ]
@@ -1421,7 +1418,7 @@
    "source": [
     "O modelo terá camadas de Embedding de 128 e LSTM de 196. \n",
     "Teremos um dropout de 0.5 para evitar que a rede decorre o dado ao invés de aprender.\n",
-    "Como temos 6 categorias teremos uma Dense final de 6 neuromios para determinar as 6 possiveis saidas. "
+    "Como temos 6 categorias teremos uma Dense final de 6 neuronios para determinar as 6 possiveis saidas. "
    ]
   },
   {
@@ -1502,7 +1499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para o treinamento do modelo vamos utilizar 20 epocas como ciclos de treinamento completo no conjunto de treinamento.\n",
+    "Para o treinamento do modelo usaremos 20 epocas como ciclos de treinamento completo no conjunto de treinamento.\n",
     "Vamos testar e comparar os modelos usando 20 ciclos, pois as quantidade de epocas suficientes para convergência variam de dados para dados. \n",
     "O objetivo de usar a mesma quantidade de epocas é ter a mesma métrica para avaliar a convergência dos modelos.\n"
    ]
@@ -1701,11 +1698,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para a avaliação dos modelos vamos utilizar as metricas:\n",
+    "Para a avaliação dos modelos usaremos as metricas:\n",
     "    \n",
     "* A **acurácia** é uma boa indicação geral de como o modelo performou.\n",
     "* A **precisão** pode ser usada em uma situação em que os Falsos Positivos são considerados mais prejudiciais que os Falsos Negativos.\n",
-    "* O recall pode ser usada em uma situação em que os Falsos Negativos são considerados mais prejudiciais que os Falsos Positivos. \n",
+    "* O **recall** pode ser usada em uma situação em que os Falsos Negativos são considerados mais prejudiciais que os Falsos Positivos. \n",
     "* O **f1-Score** é simplesmente uma maneira de observar somente 1 métrica ao invés de duas (precisão e recall) em alguma situação.\n"
    ]
   },
@@ -1732,7 +1729,7 @@
    "metadata": {},
    "source": [
     "Note que o modelo com a análise do titulo teve uma maior acurácia do que o modelo com análise do query.\n",
-    "Intuitivamenente era esperado devido ao modelo usar um corpus maior para a classificação dos produtos de 25355 para titulos contra 6397 das querys.\n"
+    "Intuitivamenente era esperado devido o modelo usar um corpus maior para a classificação dos produtos de 25355 para titulos contra 6397 das querys.\n"
    ]
   },
   {
@@ -1842,9 +1839,10 @@
    "source": [
     "### 14 - Conclusão \n",
     "\n",
-    "O modelo de categorização de produtos usando o corpus do title obteve melhor métrica com menor ciclo de treinamento, tendo -+88,% de acurácia e o modelo usando o corpus do campo 'query' também obteve bons resultados sendo necessário usar mais epocas para obter um maior ganho de precisão. \n",
-    "Para testes futuros no modelo podemos reduzir o tamanho do corpus levando em consideração as palavras de maior frequencia, assim como também avaliar os modelos com maior clicos de treinamentos para garantir maior precisão dos modelos.\n",
-    "O objetivo destas demonstração foi avaliar a possibilidade de criar um modelo de classificação de produtos baseados em suas caracteristicas disponiveis do dataset disponibilizado pelo Elo7.\n"
+    "O modelo de categorização de produtos usando o corpus do title obteve melhor métrica com menor ciclo de treinamento, tendo -+88,% de acurácia e o modelo usando o corpus do campo 'query' também obteve bons resultados sendo necessário usar mais epocas para obter maior ganho de precisão. \n",
+    "Para testes futuros no modelo posso sugerir uma análise mais detalhada do corpus levando em consideração as palavras de maior frequência, assim como também avaliar os modelos com maior clicos de treinamentos para garantir maior precisão dos modelos.\n",
+    "O objetivo desta demonstração foi avaliar a viabilidade de criar um modelo de classificação de produtos baseados nas caracteristicas disponiveis no dataset disponibilizado pelo Elo7.\n",
+    "Para resolver o problema foi utilizado o aprendizado de máquina com técnicas mais avançadas para análise de dados não estruturados, os resultados foram promissores tendo os modelos resultado em precisão maior que 80% de assertividade. Um experimento com distribuições maiores os modelos podem atingir melhores resultados. \n"
    ]
   },
   {
