--- a/Linha de Raciocínio.ipynb
+++ b/Linha de Raciocínio.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Baseado no conhecimento do negocio podemos fazer uma análise prévia dos campos que podem ser determinantes para identificar a categoria dos produtos.\n",
     "\n",
-    "Os campos disponivel no dataset devem ser avaliar como uma visão prévia dos possiveis candidatos.\n",
+    "Os campos disponivel no dataset devem ser avaliados como uma visão prévia dos possiveis candidatos.\n",
     "\n",
     "#### Análise prévia dos possiveis candidatos \n",
     "\n",
@@ -44,7 +44,7 @@
     "* **order_counts** - número de vezes que o produto foi comprado nos últimos três meses. Não é um fator determinante para a identificação do produto, não é importante para caracteristica do produto.\n",
     "* **category** - categoria do produto. Categoria do produto cadastrada pelo usuário.\n",
     "\n",
-    "Analisando a base de dados através do conhecimento de negócio os itens relevantes para a determinação do produto são dados de textos livres, não estruturados como o campo \"query\" que é o termo de busca inserido pelo usuário, o campo \"title\", que é o título do produto, e a \"concatenated_tags\", que são as tags do produto inseridas pelo vendedor. \n",
+    "Analisando a base de dados através do conhecimento de negócio os itens mais relevantes para a classificação do produto são dados de textos livres, não estruturados como o campo \"query\" que é o termo de busca inserido pelo usuário, o campo \"title\", que é o título do produto, e a \"concatenated_tags\", que são as tags do produto inseridas pelo vendedor. \n",
     "Temos o preço (price) e o peso (weight) do produto que devem ser avaliados se existisse alguma correlação forte entre eles com a categoria.\n",
     "\n",
     "### 2 : Matriz de Correlação de Pearson\n",
@@ -86,7 +86,7 @@
     "\n",
     "### 4 - Exclução dos campos que não são fatores determinantes para categorização dos produtos  \n",
     "\n",
-    "Podemos excluir os campos do dataset que evidenciamos matematicamente que não possuem correlação.\n",
+    "Podemos excluir os campos do dataset que evidenciarmos matematicamente que não possuem correlação.\n",
     "Sendo os campos que não tem correlação matemática com a categorização dos produtos.\n",
     "\n",
     "###### Hipotese \n",
@@ -105,7 +105,7 @@
     "| 10 |view_counts |\n",
     "| 11 |order_counts|\n",
     "\n",
-    "##### Campos de alta correlação usada pelo usuário para categorização do produto\n",
+    "##### Campos de alta correlação usado pelo usuário para categorização do produto\n",
     "\n",
     "|Id  |Campos com correlação|\n",
     "|--- |--------------|\n",
@@ -125,12 +125,12 @@
     "\n",
     "Para a solução do problema baseado nos campos de valores não estruturados precisaremos criar um modelo que seja capaz de aprender baseado em textos livres, baseados na análise dos campos como titulo, query e tags.\n",
     "\n",
-    "O modelo teria que fazer um minetismo da forma humana de classificar os produtos através de textos não estruturados.\n",
+    "O modelo teria que fazer um mimetismo da forma humana de classificar os produtos através de textos não estruturados.\n",
     "\n",
     "\n",
     "### 5 - Identificação do Corpus \n",
     "\n",
-    "Partindo do principio que não temos campos disponiveis no dataset de forma estruturado que sejam relevantes para a identificação da categoria dos produtos precisamos analisar o corpus nos campos de textos livres.\n",
+    "Partindo do principio que não temos campos disponiveis no dataset de forma estruturada que sejam relevantes para a identificação da categoria dos produtos precisamos analisar o corpus nos campos de textos livres.\n",
     "\n",
     "Dado que temos os campos:\n",
     "* query - termo de busca inserido pelo usuário;\n",
@@ -139,12 +139,12 @@
     "\n",
     "Precisamos avaliar qual deles teriam o melhor corpus para a identificação do produto.\n",
     "O modelo deve analisar o campo com melhor corpus para identificação da categoria dos produtos.\n",
-    "Uma análise humana lendo apenas 1 destes campos poderia identificar com precisão a categoria dos produtos tendo em mente que temos apenas 5 possiveis categorias.\n",
+    "Uma análise humana lendo apenas 1 destes campos pode identificar com precisão a categoria dos produtos tendo em mente que temos apenas 5 possiveis categorias.\n",
     "O modelo para a identificação da categoria do produto pelo corpus também teria que ter a mesma habilidade.\n",
     "Lembrando que no caso do modelo, ele não terá aprendizagem anterior como um ser humano teria para a identificação dos produtos.\n",
     "O modelo aprenderá apenas com o corpus disponivel no dataset de treinamento, sendo assim, podemos ter categorias com menor probabilidade de assertividade devido a quantidade limitada de registros, conforme demonstrado na análise de distribuição exposta no passo 4.  \n",
     "\n",
-    "##### Análisando as palavras unicas disponivel em cada campo temos:\n",
+    "##### Análisando as palavras unicas disponivel em cada campo\n",
     "\n",
     "Precisamos analisar o tamanho do corpus disponivel em cada campo.\n",
     "\n",
@@ -156,19 +156,19 @@
     "\n",
     "Note que o corpus que temos de palavras no titulo e nas tags estão muito próximas, estão entre 23 mil e 26 mil e para a busca este corpus reduz para +- 6 mil palavras.\n",
     "\n",
-    "Precisamos então avaliar qual seria o campos com maior indice de precisão para classificação de produto, o campo com maior quantidade de palavras unicas ou um campo com menor quantidade de palavras.\n",
+    "Precisamos então avaliar qual seria o campo com maior indice de precisão para classificação de produto, o campo com maior quantidade de palavras unicas ou um campo com menor quantidade de palavras.\n",
     "\n",
     "Estes são os valores do tamanho do corpus de cada campo não estruturado, ou seja a quantidade de palavras unicas usados para determinar a classificação dos produtos.\n",
     "\n",
-    "Uma análise humana lendo apenas 1 destes campos poderia identificar com precisão a categoria dos produtos tendo em mente que temos apenas 5 possiveis categorias.\n",
+    "Uma análise humana lendo apenas 1 destes campos poderia identificar com precisão a categoria dos produtos tendo em mente que temos apenas 6 possiveis categorias.\n",
     "\n",
     "### 6 - Tratamento do Corpus\n",
     "\n",
     "Para que um modelo possa analisar estes dados precisamos transformar estes dados em valores numéricos. Valores numéricos serão atribuídos a um número de n-grams por sequência.\n",
-    "Vamos precisar usar uma função de tokenização que determinará um index para cada palavra presente no corpus.\n",
-    "Para que o modelo possa analisar estes dados é necessário formatá-los de modo que todas as sequências tenham o mesmo tamanho, que no caso do texto livre podemos analisar que eles tem tamanhos distintos.\n",
-    "Então para uma análise de máquina em valores númericos precisamos utilizar outra função que será responsável por truncar as sequências maiores e completar as sequências menores com zeros.\n",
-    "A função criará o corpus para o treinamento do modelo com as variaveis de title e query, e desta forma podemos avaliar qual variavel tem o melhor corpus para o treinamento do modelo.\n",
+    "Precisaremos criar uma função de tokenização para determinar um index de cada palavra presente no corpus.\n",
+    "Para que o modelo possa analisar estes dados também é necessário formatá-los de modo que todas as sequências tenham o mesmo tamanho, que no caso do texto livre podemos analisar que eles tem tamanhos distintos.\n",
+    "Então para uma análise de máquina em valores númericos precisamos utilizar outra função que será responsável por truncar as sequências maiores ou completar as sequências menores com zeros.\n",
+    "Estas duas funções criarão o corpus para o treinamento do modelo com as variaveis de title e query, e desta forma podemos avaliar qual variavel tem o melhor corpus para o treinamento do modelo.\n",
     "\n",
     "##### Criação da base do corpus\n",
     "\n",
@@ -188,15 +188,16 @@
     "\n",
     "### 8 - Analogia com o Pensamento humano\n",
     "\n",
-    "Na hipotese de análise de correlação feita nos campos disponivel no dataset não foram encontradas caracteristicas estruturadas que tivessem correlação com a categoria do produto.\n",
+    "Na hipotese de análise de correlação feita nos campos disponivel no dataset não foram encontradas caracteristicas estruturadas que tivessem correlação significativa para uma categorização do produto.\n",
     "Devido a falta de correlação entre as variáveis estruturadas com a categoria, não teremos uma solução pláusivel usando modelos que façam a análise levando em consideração variaveis estruturadas.\n",
     "\n",
-    "Partindo deste premissa para seja possivel criar um modelo de aprendizado através do corpus precisamos criar um modelo usando tecnicas avançadas de treinamento de máquina.\n",
+    "Partindo deste premissa para seja possivel criar um modelo de aprendizado eficiente através do corpus precisamos criar um modelo usando tecnicas avançadas de treinamento de máquina.\n",
     "\n",
     "O objetivo é criar um modelo que seja capaz de classificar os produtos como os seres humanos fariam, dado que temos somente campos que identifiquem a categoria do produto com textos livres e não estruturados.\n",
     "\n",
-    "Fazendo uma analogia com o pensamento humano, se fossemos identificar os produtos através de sua descrição tanto do titulo como na query, nós não analisariamos do zero a cada segundo, ou a cada palavra.\n",
-    "Nós interpretamos as palavras com base na compreensão das palavras anteriores. Não compreendemos cada palavra com um significado único, mas vamos lendo as palavras e formando a interpretação baseada na palavra anterior, ou seja nossos pensamentos tem uma persistência.\n",
+    "Fazendo uma analogia com o pensamento humano, se fossemos identificar os produtos através de sua descrição tanto do titulo como na query, nós não analisaríamos do zero a cada palavra.\n",
+    "Nós interpretaríamos as palavras com base na compreensão das palavras anteriores. \n",
+    "Nós não compreendemos cada palavra com um significado único, mas vamos lendo as palavras e formando a interpretação baseada na palavra anterior, ou seja nossos pensamentos tem uma persistência.\n",
     "\n",
     "Para resolver este problema através da análise do corpus, o modelo criado também terá que ser capaz de ter esta persistência para poder classificar as categorias dos produtos baseados na descrição do textos.\n",
     "\n",
@@ -227,7 +228,7 @@
     "* max_features_query = 6397\n",
     "\n",
     "O modelo terá camadas de Embedding de 128 e LSTM de 196, e um dropout de 0.5 para evitar que a rede decorre o dado ao invés de aprender.\n",
-    "Como temos 6 categorias teremos uma Dense de 6 neuromios para representar as 6 possiveis saidas.\n",
+    "Como temos 6 categorias teremos uma Dense de 6 neuronios para representar as 6 possiveis saidas.\n",
     "\n",
     "\n",
     "#### Para o modelo para corpus do campo Titulo\n",
@@ -256,11 +257,11 @@
     "\n",
     "### 11 - Treinamento dos modelos \n",
     "\n",
-    "Para o treinamento do modelo vamos utilizar 20 epocas como ciclos de treinamento completo no conjunto de treinamento.\n",
+    "Para o treinamento do modelo usaremos 20 epocas como ciclos de treinamento completo no conjunto de treinamento.\n",
     "Vamos testar e comparar os modelos usando 20 ciclos, pois as quantidade de epocas suficientes para convergência variam de dados para dados. \n",
     "O objetivo de usar a mesma quantidade de epocas é ter a mesma metrica para avaliar a convergencia dos modelos.\n",
     "A quantidade de epocas no treinamento pode ser interrompida quando o erro ficar abaixo de um valor X determinado.\n",
-    "As 20 epocas também entra no território da prevenção do excesso de ajustes, este é um valor inicial para validação dos modelos treinados no corpus do campo title e query.\n",
+    "As 20 epocas também entram no território da prevenção do excesso de ajustes, este é um valor inicial para validação dos modelos treinados no corpus do campo title e query.\n",
     "\n",
     "### 12 - Perda e Acurácia do modelo por época\n",
     "\n",
@@ -276,7 +277,7 @@
     "\n",
     "* A **acurácia** é uma boa indicação geral de como o modelo performou.\n",
     "* A **precisão** pode ser usada em uma situação em que os Falsos Positivos são considerados mais prejudiciais que os Falsos Negativos.\n",
-    "* O recall pode ser usada em uma situação em que os Falsos Negativos são considerados mais prejudiciais que os Falsos Positivos. \n",
+    "* O **recall** pode ser usada em uma situação em que os Falsos Negativos são considerados mais prejudiciais que os Falsos Positivos. \n",
     "* O **f1-Score** é simplesmente uma maneira de observar somente 1 métrica ao invés de duas (precisão e recall) em alguma situação.\n",
     "\n",
     "\n",
